# nu

./: .replit  README_VPS.md  build.gradle  build_apk.sh  gradlew  local.properties  settings.gradle
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/io/shubham0204/smollmandroid/: SmolChatApplication.kt
app/src/main/java/io/shubham0204/smollmandroid/ui/screens/model_download/: DownloadModelActivity.kt  DownloadModelsViewModel.kt  HFModelSearchScreen.kt
app/src/main/kotlin/com/example/chatoffline/: MainActivity.kt  Message.kt  MessageAdapter.kt  OfflineChatEngine.kt
app/src/main/res/drawable/: message_background.xml
app/src/main/res/layout/: activity_main.xml  item_message.xml
app/src/main/res/values/: strings.xml  themes.xml
attached_assets/: Pasted--C-p-nh-t-g-i-h-th-ng-C-p-nh-t-g-i-h-th-ng-xong-C-i-Java-17-c-ng-c-C-i-Java-1-1752044131621_1752044131625.txt  Pasted-honour-the-JVM-settings-for-this-build-a-single-use-Daemon-process-will-be-forked-See-https-docs--1757397758893_1757397758912.txt  Pasted-on-steps-CaptureStateAfterExecutionStep-execute-CaptureStateAfterExecutionStep-java-72--1757399040777_1757399040780.txt
smollm/src/main/cpp/: CMakeLists.txt
