
# CMakeLists.txt for future JNI/NDK integration with llama.cpp
cmake_minimum_required(VERSION 3.22.1)

project("chatengine")

# Chuẩn bị cho llama.cpp integration
# set(CMAKE_CXX_STANDARD 17)

# add_library(chatengine SHARED
#         native-lib.cpp)

# find_library(log-lib log)

# target_link_libraries(chatengine ${log-lib})

# Placeholder - sẽ được kích hoạt khi cần JNI
message("NDK build prepared but not active yet")
